FenicsPDE/MOND/jupyternbs/dolfin_reports/jitfailure-dolfin_expression_bcc39f7fc1ea65b5c96f0e4260ab9a46/error.log
/tmp/tmpgmvchaoh/dolfin_expression_bcc39f7fc1ea65b5c96f0e4260ab9a46.cpp: In member function ‘virtual void dolfin::dolfin_expression_bcc39f7fc1ea65b5c96f0e4260ab9a46::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpgmvchaoh/dolfin_expression_bcc39f7fc1ea65b5c96f0e4260ab9a46.cpp:76:46: error: expected ‘)’ before ‘;’ token
           values[0] = mgb*a0*exp(-pow(x[0],2);
                                              ^
/tmp/tmpgmvchaoh/dolfin_expression_bcc39f7fc1ea65b5c96f0e4260ab9a46.cpp: In member function ‘virtual double dolfin::dolfin_expression_bcc39f7fc1ea65b5c96f0e4260ab9a46::get_property(std::__cxx11::string) const’:
/tmp/tmpgmvchaoh/dolfin_expression_bcc39f7fc1ea65b5c96f0e4260ab9a46.cpp:88:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "x_close") return x_close;          if (name == "y_close") return y_close;          if (name == "z_close") return z_close;          if (name == "radius_close") return radius_close;          if (name == "eps") return eps;          if (name == "stand_dev") return stand_dev;          if (name == "p") return p;
           ^~
/tmp/tmpgmvchaoh/dolfin_expression_bcc39f7fc1ea65b5c96f0e4260ab9a46.cpp:88:49: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "x_close") return x_close;          if (name == "y_close") return y_close;          if (name == "z_close") return z_close;          if (name == "radius_close") return radius_close;          if (name == "eps") return eps;          if (name == "stand_dev") return stand_dev;          if (name == "p") return p;
                                                 ^~
